# msg_authentication_ecu

./: CMakeLists.txt  Makefile  main.c  readme.md
inc/: aes.h  aesconfig.h  aursa.h  aursatype.h  camellia.h  cipher_wrap.h  config.h  libaursa.h  libausec.h  rsa.h  sha2.h
key/: MakeKey.sh  MakePrv2h.sh  MakePub2h.sh  aursa_key_module.py  my_private.h  my_public.h  private.pem  public.pem
output/: parsing format.txt  run_main  test.txt
src/: CMakeLists.txt  aes.c  aursa.c  bignum.c  build.sh  build_run.sh  camellia.c  cipher.c  cipher_wrap.c  md.c  md_wrap.c  padlock.c  readme.md  rsa.c  sha1.c  sha2.c
